--- a/Lab01_LWP/app/src/main/AndroidManifest.xml
+++ b/Lab01_LWP/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme._01_StAtus_W3"
         tools:targetApi="31">
         <activity
+            android:name=".NavigationLWP"
+            android:exported="false"
+            android:label="@string/title_activity_navigation_lwp"
+            android:theme="@style/NoActionBar" />
+        <activity
+            android:name=".NavigationMainActivity"
+            android:exported="false"
+            android:label="@string/title_activity_navigation_main" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
